[package]
name = "recorder"
version = "0.1.0"
edition = "2018"

[dependencies]
env_logger = "0.6"
envy = "0.4"
failure = "0.1"
hex = "0.3"
http = "0.1"
lambda_http = "0.1"
lambda_runtime = "0.2"
log = "0.4"
reqwest = "0.9"
rust-crypto = "0.2"
serde = { version = "1.0"}#, features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"